updated templateBIOBJarticle.tex to display table correctly (now that a reference algorithm is available)

--- a/code-postprocessing/latex-templates/templateBIOBJarticle.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJarticle.tex
@@ -408,17 +408,19 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{sidewaystable*}
+\begin{table*}
+\vspace*{-1cm}
 \centering {\tiny
 \parbox{0.499\textwidth}{\centering
-   {\small 5-D}\\
+   %{\small 5-D}\\
    \input{\bbobdatapath\algfolder pptable_05D_noiselessall}}%
 \parbox{0.499\textwidth}{\centering
-   {\small 20-D}\\
+   %{\small 20-D}\\
    \input{\bbobdatapath\algfolder pptable_20D_noiselessall}}}%
+	\vspace*{-0.4cm}
 \caption[Table of aRTs]{\label{tab:aRTs}\bbobpptablecaption{} 
 }
-\end{sidewaystable*}
+\end{table*}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\section{Discussion}  % and/or conclusions etc
