Renamed bbob_pproc_commands.tex to cocopp_commands.tex

--- a/code-postprocessing/latex-templates/templateBBOBarticle.tex
+++ b/code-postprocessing/latex-templates/templateBBOBarticle.tex
@@ -80,7 +80,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % rungeneric.py writes data into a subfolder of ppdata
 \newcommand{\bbobdatapath}{ppdata/} % default output folder of rungeneric.py
-\input{\bbobdatapath bbob_pproc_commands.tex} % provide default of algname and algfolder
+\input{\bbobdatapath cocopp_commands.tex} % provide default of algname and algfolder
 % \renewcommand{\algname}{MYNAME}  % name of algorithm as it should appear in the text
 % \renewcommand{\algfolder}{ABC/} % subfolder of \bbobdatapath for processed algorithm
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
