--- a/code-postprocessing/latex-templates/templateBBOBcmp.tex
+++ b/code-postprocessing/latex-templates/templateBBOBcmp.tex
@@ -90,7 +90,7 @@
 
 % location of pictures files
 \newcommand{\bbobdatapath}{ppdata/}
-\input{\bbobdatapath bbob_pproc_commands.tex}
+\input{\bbobdatapath cocopp_commands.tex}
 \graphicspath{{\bbobdatapath}}
 
 % pre-defined commands
