--- a/code-postprocessing/latex-templates/templateBBOBmany.tex
+++ b/code-postprocessing/latex-templates/templateBBOBmany.tex
@@ -83,7 +83,7 @@
 % ...
 % location of pictures files
 \newcommand{\bbobdatapath}{ppdata/}
-\input{\bbobdatapath bbob_pproc_commands.tex}
+\input{\bbobdatapath cocopp_commands.tex}
 \graphicspath{{\bbobdatapath}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -324,7 +324,7 @@ unsuccessful trial under consideration.
 \caption[Expected running time divided by dimension
 versus dimension]{
 \label{fig:scaling}
-% command defined in bbob_pproc_commands.tex:
+% command defined in cocopp_commands.tex:
 \bbobppfigslegend{$f_1$ and $f_{24}$}  % \algorithmA can be defined above, see above
 }
 % 
