--- a/code-postprocessing/latex-templates/templateBIOBJarticle.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJarticle.tex
@@ -77,7 +77,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % rungeneric.py writes data into a subfolder of ppdata
 \newcommand{\bbobdatapath}{ppdata/} % default output folder of rungeneric.py
-\input{\bbobdatapath bbob_pproc_commands.tex} % provide default of algname and algfolder
+\input{\bbobdatapath cocopp_commands.tex} % provide default of algname and algfolder
 % \renewcommand{\algname}{MY-ALGORITHM-NAME}  % name of algorithm as it should appear in the text
 % \renewcommand{\algfolder}{FOLDER/} % subfolder of \bbobdatapath for processed algorithm
 % Find all \change commands in the text below and update the information according to your data
