--- a/code-postprocessing/latex-templates/templateBIOBJmultiple.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJmultiple.tex
@@ -77,7 +77,7 @@
 % ...
 % location of pictures files
 \newcommand{\bbobdatapath}{ppdata/}
-\input{\bbobdatapath bbob_pproc_commands.tex}
+\input{\bbobdatapath cocopp_commands.tex}
 \graphicspath{{\bbobdatapath}}
 
 
