--- a/code-postprocessing/latex-templates/templateBIOBJarticle.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJarticle.tex
@@ -76,7 +76,7 @@
 %%%%%%%%% TO BE EDITED %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % rungeneric.py writes data into a subfolder of ppdata
-\newcommand{\bbobdatapath}{ppdata/} % default output folder of rungeneric.py
+\newcommand{\bbobdatapath}{ppdata/} % change default output folder of COCO if desired
 \input{\bbobdatapath cocopp_commands.tex} % provide default of algname and algfolder
 % \renewcommand{\algname}{MY-ALGORITHM-NAME}  % name of algorithm as it should appear in the text
 % \renewcommand{\algfolder}{FOLDER/} % subfolder of \bbobdatapath for processed algorithm
@@ -109,8 +109,8 @@
 \begin{document}
 %
 % --- Author Metadata here ---
-\conferenceinfo{GECCO'16,} {July 20-24, 2016, Denver, CO, USA.}
-\CopyrightYear{2016}
+\conferenceinfo{GECCO'17,} {July 15-19, 2017, Berlin, Germany.}
+\CopyrightYear{2017}
 \crdata{TBA}
 \clubpenalty=10000
 \widowpenalty = 10000
@@ -120,8 +120,8 @@
 % \titlenote{If needed}
 }
 \subtitle{Draft version
-\titlenote{Submission deadline: April 3rd.}}
-% Camera-ready paper due by May 4th.
+\titlenote{Submission deadline: March 28th.}}
+% Camera-ready paper due by April 16th.
 
 %
 % You need the command \numberofauthors to handle the 'placement
