--- a/code-postprocessing/latex-templates/templateBIOBJmultiple.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJmultiple.tex
@@ -69,14 +69,14 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Definitions
 
-% Algorithm names as they appear in the tables, uncomment if necessary
-%\newcommand{\algAtables}{\algaperfprof}  % first argument in the post-processing
-% \newcommand{\algBtables}{\algbperfprof}  % first argument in the post-processing
-% \newcommand{\algCtables}{\algcperfprof}  % first argument in the post-processing
-% \newcommand{\algDtables}{\algdperfprof}  % second argument in the post-processing
+% Algorithm names as they appear in the tables, uncomment and adapt if necessary
+% \newcommand{\algAtables}{ALGO1}  % first argument in the post-processing
+% \newcommand{\algBtables}{ALGO2}  % second argument in the post-processing
+% \newcommand{\algCtables}{ALGO3}  % third argument in the post-processing
+% \newcommand{\algDtables}{ALGO4}  % forth argument in the post-processing
 % ...
 % location of pictures files
-\newcommand{\bbobdatapath}{ppdata/}
+\newcommand{\bbobdatapath}{ppdata/} % change default output folder of COCO if desired
 \input{\bbobdatapath cocopp_commands.tex}
 \graphicspath{{\bbobdatapath}}
 
@@ -120,7 +120,7 @@
 
 %
 % --- Author Metadata here ---
-\conferenceinfo{GECCO'17,} {July 1-2, 2017, Berlin, Germany.}
+\conferenceinfo{GECCO'17,} {July 15-19, 2017, Berlin, Germany.}
 \CopyrightYear{2017}
 \crdata{TBA}
 \clubpenalty=10000
