--- a/code-postprocessing/latex-templates/templateBBOBmany.tex
+++ b/code-postprocessing/latex-templates/templateBBOBmany.tex
@@ -82,7 +82,7 @@
 % \newcommand{\algdtables}{\algdperfprof}  % second argument in the post-processing
 % ...
 % location of pictures files
-\newcommand{\bbobdatapath}{ppdata} % change default output folder of COCO if desired
+\newcommand{\bbobdatapath}{ppdata/} % change default output folder of COCO if desired
 \input{\bbobdatapath cocopp_commands.tex}
 \graphicspath{{\bbobdatapath}}
 
