--- a/code-postprocessing/latex-templates/templateBBOBcmp.tex
+++ b/code-postprocessing/latex-templates/templateBBOBcmp.tex
@@ -89,7 +89,7 @@
 %\newcommand{\algorithmBshort}{algB}  % second argument in the post-processing
 
 % location of pictures files
-\newcommand{\bbobdatapath}{ppdata} % change default output folder of COCO if desired
+\newcommand{\bbobdatapath}{ppdata/} % change default output folder of COCO if desired
 \input{\bbobdatapath cocopp_commands.tex}
 \graphicspath{{\bbobdatapath}}
 
