updated first LaTeX templates to new ACM style (actually all `bbob` templates are done)

--- a/code-postprocessing/latex-templates/bbob.bib
+++ b/code-postprocessing/latex-templates/bbob.bib
@@ -1090,7 +1090,7 @@
   number = {2009/20},
   note = {Updated February 2010},
   country = {Austria},
-  url = {http://coco.gforge.inria.fr/bbob2010-downloads}
+  url = {http://coco.lri.fr/downloads/download15.03/bbobdocfunctions.pdf}
 }
 
 @TECHREPORT{wp200902,
@@ -1253,7 +1253,7 @@
   number = {RR-6829},
   note = {Updated February 2010},
   country = {France},
-  url = {http://coco.gforge.inria.fr/bbob2010-downloads}
+  url = {http://coco.lri.fr/downloads/download15.03/bbobdocfunctions.pdf}
 }
 
 @TECHREPORT{hansen2010noi,
